# CommunityModules

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  README.md  azure-pipelines-1.yml  azure-pipelines-2.yml  azure-pipelines-3.yml  azure-pipelines.yml  plugin_helper.cmake  vst3wrap-pipeline.yml
Bruno_Bordi/db_to_voltage/: CMakeLists.txt  db_to_voltage.cpp  db_to_voltage.rc
Elena_Novaretti/: CMakeLists.txt
JeffMcClintock/: CMakeLists.txt  build_sfizz.txt
JeffMcClintock/ADSR/: ADSR.se1  ADSR_gate_glitch.se1  ADSR_gate_glitch.synthedit  Adsr.cpp  Adsr.rc  Adsr.xml  Adsr4.cpp  CMakeLists.txt
JeffMcClintock/ADSR/tests/: CMakeLists.txt  test_Adsr.cpp
JeffMcClintock/AudioPlayer/: AudioPlayer.cpp  AudioPlayer.rc  AudioPlayer.synthedit  AudioPlayer.xml  CMakeLists.txt
JeffMcClintock/Crusher/: CMakeLists.txt  Crusher.cpp  Crusher.htm  Crusher.synthedit  Crusher.xml
JeffMcClintock/DelayAnalog/: CMakeLists.txt  DelayAnalog.cpp  DelayAnalog.htm  DelayAnalog.rc  DelayAnalog.vcxproj  DelayAnalog.vcxproj.filters  DelayAnalog.xml
JeffMcClintock/DelayAnalog/mac/DelayAnalog.xcodeproj/: project.pbxproj
JeffMcClintock/Dent/: CMakeLists.txt  Dent.htm  Dent.rc  Dent.xml  DentBGui.cpp  DentGui.cpp  FastBlurDemo.cpp  ShadowBGui.cpp  ShadowGui.cpp
JeffMcClintock/DrawingTest/: CMakeLists.txt  Drawing Test.se1  DrawingTest.xml  DrawingTestGui.cpp  DrawingTestGui.h  DrawingTestLinesGui.cpp  DrawingTestLinesGui.h  GUI_3_0.cpp  GUI_3_0.h  LeastShittyText.cpp  LeastShittyText.h  leegame.cpp  leegame.h
JeffMcClintock/Dynamics/: CMakeLists.txt  Dynamics.cpp  Dynamics.sln  Dynamics.vcxproj  Dynamics.vcxproj.filters  Dynamics.xml  PeakMeterHold.cpp  module.rc
JeffMcClintock/Environment Detect/: CMakeLists.txt  EnvironmentDetect.cpp  EnvironmentDetect.rc  EnvironmentDetect.xml
JeffMcClintock/EnvironmentVariable/: CMakeLists.txt
JeffMcClintock/IDE Print Value/: CMakeLists.txt  IDEPrintValue.cpp  IDEPrintValue.rc  IDEPrintValue.xml
JeffMcClintock/Loudness/: CMakeLists.txt  Ebu128LoudnessMeter.cpp  Ebu128LoudnessMeter.h  Loudness.rc  Loudness.synthedit  Loudness.xml
JeffMcClintock/Loudness/filters/: SecondOrderIIRFilter.cpp  SecondOrderIIRFilter.h
JeffMcClintock/MouseTarget/: CMakeLists.txt  ColorLagGui.cpp  ColorSwitchGui.cpp  EmmissiveComponent.cpp  EmmissiveComponent.h  EmmissiveFilter.cpp  EmmissiveFilter.h  FloatsToColorGui.cpp  HexToColorGui.cpp  Image4Gui.cpp  Image4Gui.h  LabelGui.cpp  MathGui.cpp  MouseTarget.rc  MouseTarget.synthedit  MouseTarget.xml  MouseTargetGui.cpp  SVGToCPP.cpp  ShadowFilter.cpp  ShadowFilter.h  SvgImage.cpp  WithImageEffects.h
JeffMcClintock/Oscillator/: CMakeLists.txt  Oscillator.cpp  Oscillator.vcxproj  Oscillator.xml
JeffMcClintock/Oscillator/mac/Oscillator.xcodeproj/: project.pbxproj
JeffMcClintock/OscillatorHD/: CMakeLists.txt  OscMipmapPolicy.h  OscMipmaps.h  Oscillator.cpp  Oscillator.h  Oscillator.se1  Oscillator.xml  Oscillator3.sln  Oscillator3.vcxproj  Oscillator3.vcxproj.filters  Wavetable.cpp  Wavetable.h  real_fft.cpp  real_fft.h
JeffMcClintock/OverSampling Detect/: CMakeLists.txt  OverSamplingDetect.cpp  OverSamplingDetect.rc  OverSamplingDetect.xml
JeffMcClintock/PeakFollower/: CMakeLists.txt  Peak Follower.synthedit  PeakFollower2.cpp  PeakFollower2.xml  module.rc
JeffMcClintock/RepaintDiag/: CMakeLists.txt  RepaintDiag.rc  RepaintDiag.xml  RepaintDiagGui.cpp
JeffMcClintock/SamplePlayer3/: CMakeLists.txt  SamplePlayerSfz.cpp  SamplePlayerSfz.xml  Shipping sfizz with SynthEdit Instructions.txt  plugin_helper_local.cmake
JeffMcClintock/SamplePlayer3Multi/: CMakeLists.txt  SamplePlayer3Multi.cpp
JeffMcClintock/SignalLogger/: CMakeLists.txt  PhaseScope.synthedit  PhaseScopeGui.cpp  SignalLogger.cpp  SignalLogger.xml  SignalLoggerGui.cpp
JeffMcClintock/TestModules/: TestModules.cpp  TestModules.vcxproj  TestModules.vcxproj.filters
JeffMcClintock/Unison/: CMakeLists.txt  Unison.cpp  Unison.rc  Unison.synthedit  Unison.xml
JeffMcClintock/WaveformScroller/: CMakeLists.txt  WaveformScroller.cpp  WaveformScroller.xml  WaveformScrollerGui.cpp  module.rc
JeffMcClintock/Wrapper_VST2/: AEffectWrapper.cpp  AEffectWrapper.h  AaVstWrapperDiagGui.cpp  AaVstWrapperDiagGui.h  CMakeLists.txt  NativeWindow_Win32.cpp  NativeWindow_Win32.h  PluginLifetimeManager.cpp  PluginLifetimeManager.h  VST2WrapperController.cpp  VST2WrapperController.h  Vst2WrapperGui.cpp  Vst2WrapperGui.h  VstFactory.cpp  VstFactory.h  VstwrapperfailGui.cpp  VstwrapperfailGui.h  Wrapper_VST2.cpp  Wrapper_VST2.h  Wrapper_VST2.rc
JeffMcClintock/Wrapper_VST2/VST3 SDK/: aeffeditor.h  audioeffect.cpp  audioeffect.h  audioeffectx.cpp  audioeffectx.h  vstplugmain.cpp
JeffMcClintock/Wrapper_VST2/VST3 SDK/pluginterfaces/vst2.x/: aeffect.h  aeffectx.h  vstfxstore.h
JeffMcClintock/Wrapper_VST3/: AaVstWrapperDiagGui.cpp  AaVstWrapperDiagGui.h  CMAKE_BUILD.md  CMakeLists.txt  ControllerWrapper.cpp  ControllerWrapper.h  EditButtonGui.cpp  EditButtonGui.h  PeerCommunication.h  ProcessorWrapper.cpp  ProcessorWrapper.h  Vst3ParamSet.cpp  VstFactory.cpp  VstFactory.h  VstwrapperfailGui.cpp  VstwrapperfailGui.h  WindowManager.cpp  WindowManager.h  Wrapper_vst3.htm  Wrapper_vst3.rc  Wrapper_vst3.sln  Wrapper_vst3.vcxproj  Wrapper_vst3.vcxproj.filters  Wrapper_vst3.xml  ivstmidi2extension.h  myPluginProvider.h  my_input_stream.cpp  my_msg_que_output_stream.h
JeffMcClintock/Wrapper_VST3/mac/Wrapper_vst3.xcodeproj/: project.pbxproj
JeffMcClintock/sfizz/sfizz.sem/: Project1.se1
JeffMcClintock/sfizz/sfizz.sem/Sample Player3/: CMakeLists.txt  Sample Player 3 - SFZ.se1  SamplePlayerSfz.cpp  SamplePlayerSfz.htm  SamplePlayerSfz.rc  SamplePlayerSfz.vcxproj  SamplePlayerSfz.vcxproj.filters
JeffMcClintock/sfizz/sfizz.sem/Sample Player3/mac/OkCancelDialog.xcodeproj/: project.pbxproj
JeffMcClintock/sfizz/sfizz.sem/se_sdk3/: Drawing_API.h  mp_api.h  mp_interface_wrapper.h  mp_sdk_audio.cpp  mp_sdk_audio.h
JeffMcClintock/sfizz/sfizz.sem/shared/: FileFinder.h  FileWatcher.cpp  FileWatcher.h  ImageMetadata.h
JeffMcClintock/test/: CMakeLists.txt  test.cpp
RJ/: CMakeLists.txt
(+63 files in other folders)
