cmake_minimum_required(VERSION 3.15)
project(JeffMcClintock)

add_subdirectory(ADSR)
add_subdirectory(AudioPlayer)
add_subdirectory(Crusher)
add_subdirectory(DelayAnalog)
add_subdirectory(Dent)
add_subdirectory(DrawingTest)
add_subdirectory(Dynamics)
add_subdirectory("Environment Detect")
add_subdirectory("IDE Print Value")
add_subdirectory(Logic)
add_subdirectory(Loudness)
add_subdirectory(MouseTarget)
add_subdirectory(OscillatorHD)
add_subdirectory("OverSampling Detect")
add_subdirectory(PeakFollower)
add_subdirectory(RepaintDiag)
add_subdirectory(SignalLogger)
add_subdirectory("test")
add_subdirectory("Unison")
# add_subdirectory(WaveformScroller)
# sample player 3 has it's own independant cmake: add_subdirectory(SamplePlayer3)

if(WIN32)
	add_subdirectory(Wrapper_VST2)
# don't build on macOS yet
#	add_subdirectory(Wrapper_VST3)
endif(WIN32)
